--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
     <script src='/js/app/app.module.js' ></script>
     <script src='/js/app/app.config.js' ></script>
 
+    <script src='/js/core/post/post.module.js' ></script>
+    <script src='/js/core/post/post.service.js' ></script>
+
     <script src='/js/app/blog-detail/blog-detail.module.js' ></script>
     <script src='/js/app/blog-detail/blog-detail.component.js' ></script>
 
