--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
     <script src='/js/app/blog-list/blog-list.module.js' ></script>
     <script src='/js/app/blog-list/blog-list.component.js' ></script>
 
+    <script src='/js/utils/confirm-click/confirm-click.module.js' ></script>
+    <script src='/js/utils/confirm-click/confirm-click.directive.js' ></script>
+
     <style>
     .new-class {
         font-size: 72px;
