--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
     <title>Try Angular 1.5</title>
      <script src='/js/angular.js' ></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js'></script>
@@ -38,8 +41,10 @@
     </style>
   </head>
   <body>
-
-    <div ng-view>
+    <nav class="container">
+      <h1>Us</h1>
+    </nav>
+    <div class="container" ng-view>
 
     </div>
 
