--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js'></script>
 
+    <script src='/js/external/dirPagination.js' ></script>
+
     <script src='/js/app/app.module.js' ></script>
     <script src='/js/app/app.config.js' ></script>
 
