--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
     <script src='/js/utils/confirm-click/confirm-click.module.js' ></script>
     <script src='/js/utils/confirm-click/confirm-click.directive.js' ></script>
 
+    <script src='/js/utils/try-nav/try-nav.module.js' ></script>
+    <script src='/js/utils/try-nav/try-nav.directive.js' ></script>
+
     <style>
     .new-class {
         font-size: 72px;
@@ -43,12 +46,13 @@
     </style>
   </head>
   <body>
-    <nav class="container">
-      <h1>Us</h1>
-    </nav>
-    <div class="container" ng-view>
+      <div class="container">
+          <try-nav>
+          </try-nav>
+          <div ng-view>
+          </div>
+      </div>
 
-    </div>
 
   </body>
 </html>
