--- a/src/index.html
+++ b/src/index.html
@@ -1,64 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" ng-app='try'>
-  <head>
-    <base href="/">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <base href="/">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>Try Angular 1.5</title>
-     <script src='/js/angular.js' ></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js'></script>
+        <title>Try Angular 1.5</title>
+        <script src='/js/angular.js' ></script>
+        <script src='/js/ui-bootstrap-tpls-2.5.0.js' ></script>
 
-    <script src='/js/external/dirPagination.js' ></script>
+        <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-resource.js'></script>
+        <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js'></script>
 
-    <script src='/js/app/app.module.js' ></script>
-    <script src='/js/app/app.config.js' ></script>
+        <script src='/js/external/dirPagination.js' ></script>
 
-    <script src='/js/core/post/post.module.js' ></script>
-    <script src='/js/core/post/post.service.js' ></script>
+        <script src='/js/app/app.module.js' ></script>
+        <script src='/js/app/app.config.js' ></script>
 
-    <script src='/js/app/blog-detail/blog-detail.module.js' ></script>
-    <script src='/js/app/blog-detail/blog-detail.component.js' ></script>
+        <script src='/js/core/post/post.module.js' ></script>
+        <script src='/js/core/post/post.service.js' ></script>
 
-    <script src='/js/app/blog-list/blog-list.module.js' ></script>
-    <script src='/js/app/blog-list/blog-list.component.js' ></script>
+        <script src='/js/app/blog-detail/blog-detail.module.js' ></script>
+        <script src='/js/app/blog-detail/blog-detail.component.js' ></script>
 
-    <script src='/js/utils/confirm-click/confirm-click.module.js' ></script>
-    <script src='/js/utils/confirm-click/confirm-click.directive.js' ></script>
+        <script src='/js/app/blog-list/blog-list.module.js' ></script>
+        <script src='/js/app/blog-list/blog-list.component.js' ></script>
 
-    <script src='/js/utils/try-nav/try-nav.module.js' ></script>
-    <script src='/js/utils/try-nav/try-nav.directive.js' ></script>
+        <script src='/js/utils/confirm-click/confirm-click.module.js' ></script>
+        <script src='/js/utils/confirm-click/confirm-click.directive.js' ></script>
 
-    <style>
-    .new-class {
-        font-size: 72px;
-    }
-    .other-class {
-        font-size: 32px;
-    }
-    .new-class2 {
-        font-size: 120px;
-    }
-    </style>
-  </head>
-  <body>
-      <div class="container">
-          <try-nav>
-          </try-nav>
-          <div ng-view>
-          </div>
-      </div>
+        <script src='/js/utils/try-nav/try-nav.module.js' ></script>
+        <script src='/js/utils/try-nav/try-nav.directive.js' ></script>
 
-
-  </body>
+        <style>
+            .new-class {
+                font-size: 72px;
+            }
+            .other-class {
+                font-size: 32px;
+            }
+            .new-class2 {
+                font-size: 120px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <try-nav>
+            </try-nav>
+            <div ng-view>
+            </div>
+        </div>
+    </body>
 </html>
-
-
-
-
-
-
